# mycode

code/C++/: 123.doc  a.cpp  a.out  bitset.cpp  test.cpp  test.doc  time.cpp
code/C++/get_sysinfo/: info.cpp  info.h
code/github/: Makefile  main  main.cpp
code/github/HTTP/: Makefile  client.cpp  http_client.cpp  http_client.h  test  test.cpp
code/github/HTTP/spdlog/: CMakeLists.txt  slog.h
code/github/HTTP/spdlog/bench/: boost-bench-mt.cpp  boost-bench.cpp  easylogging-bench-mt.cpp  easylogging-bench.cpp  g2log-async.cpp  glog-bench-mt.cpp  glog-bench.cpp  spdlog-async.cpp  spdlog-bench-mt.cpp  spdlog-bench.cpp  spdlog-null-async.cpp
code/github/HTTP/spdlog/bench/latency/: g3log-crush.cpp  g3log-latency.cpp  spdlog-latency.cpp  utils.h
code/github/HTTP/spdlog/example/: bench.cpp  example.cpp  multisink.cpp
code/github/HTTP/spdlog/include/spdlog/details/: os.h
code/github/HTTP/spdlog/tests/: errors.cpp  file_helper.cpp  file_log.cpp  format.cpp  includes.h  registry.cpp  test_macros.cpp  utils.cpp  utils.h
code/lib/lib/: Makefile  base_socket.h  buffer.h  end_point.h  error_code.h  io_service.cpp  io_service.h  mc_tcp.cpp  mc_tcp.h  net.h
code/lib/test/client/: Makefile  client.cpp  client.h  main.cpp
code/lib/test/server/: Makefile  asio_server.cpp  asio_server.h  main.cpp  ring_buffer.h
code/platform/platform/: ._businessmanagement.h  Makefile  businessmanagement.cpp  businessmanagement.h  cencode.c  cmd.h  common.h  config.yaml  httpserver.cpp  httpserver.h  main.cpp  mdsServer  taskinterface.h  web_server.cpp  web_server.h
code/platform/tools/include/: ._tcp_client.h  Makefile  data_recv.h  tcp_client  tcp_server  tcp_server.cpp  tcp_server.h  test_tcp_client.cpp  test_tcp_server.cpp  test_udp_client.cpp  test_udp_server.cpp  udp_client  udp_client.h  udp_server  udp_server.h
code/platform/tools/log/: Log.cpp  Log.h
code/platform/tools/net/: Makefile  client  tcp  tcp_client.cpp  tcp_client.h  tcp_server.cpp  udp_client.cpp  udp_server.cpp  udpclient  udpserver
code/platform/tools/tinyxml/: CTcxml.cpp  CTcxml.h
practise/: ring_buffer.h
practise/cond/: .cond.h.swp  Makefile  cond  cond.cpp  cond.h  main.cpp
practise/message/: Makefile  base_message.h  main.cpp  message  message_manager.cpp  message_manager.h  return_code.h  test_message.cpp  test_message.h
practise/net/: 1q  base_socket.h  mc_tcp.cpp  mc_tcp.h  net.cpp  net.h  ring_buffer.h
tools/Web/: CMakeLists.txt
tools/Web/client/: url_client.cpp  url_client.h
tools/Web/common/: header.h  openssl_hostname_validation.cpp  web_ssl.hpp
tools/Web/server/: web_server.cpp  web_server.h
tools/Web/test/: Makefile  a.out  client  client_test.cpp  server  server_test.cpp  test.c
tools/libevent-2.1.11-stable/: Makefile.bak  Makefile.in  Makefile.nmake  config.h  config.h.in  config.status  configure  libevent_openssl.pc  libtool
tools/libevent-2.1.11-stable/autom4te.cache/: output.1  requests  traces.0  traces.1
tools/libevent-2.1.11-stable/include/event2/: event-config.h
tools/libevent-2.1.11-stable/sample/: a.cpp  a.out  http-connect.c  http-server.c  https-client.c
tools/libevent-2.1.11-stable/sample/.deps/: sample_https_client-hostcheck.Po  sample_https_client-https-client.Po  sample_https_client-openssl_hostname_validation.Po  sample_le_proxy-le-proxy.Po
tools/libevent-2.1.11-stable/test/.deps/: test_regress-regress.Po  test_regress-regress_dns.Po  test_regress-regress_finalize.Po  test_regress-regress_rpc.Po  test_regress-regress_ssl.Po  test_regress-regress_zlib.Po
